--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^6.3.16",
     "magic-sdk": "^8.1.1",
     "moralis": "^1.8.1",
+    "moralis-v1": "^1.12.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
